[package]
name = "hybrid-api"
version = "0.1.1"
edition = "2021"
authors = ["Jonathan Brown"]
description = "A library for querying Hybrid indexes."
homepage = "https://hybridscan.app/"
repository = "https://github.com/hybrid-explorer/hybrid-api-rs"
license = "Apache-2.0"

[dependencies]
futures-util = "0.3.30"
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }
hybrid-indexer = "0.5.2"
tokio-tungstenite = "0.21.0"
