[package]
name = "acuity-index-substrate-api"
version = "0.2.0"
edition = "2021"
authors = ["Jonathan Brown"]
description = "A library for querying indexes built with Acuity Index Substrate."
homepage = "https://index.acuity.network/"
repository = "https://github.com/acuity-network/acuity-index-substrate-api-rs"
license = "Apache-2.0"

[dependencies]
futures-util = "0.3.30"
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }
acuity-index-substrate = "0.6.0"
tokio-tungstenite = "0.21.0"
